Rebrand native/LWJGL bridge ABI to Booxin and fix Forge classloader split.
Rename pojav* symbols and jars to booxin*, load guanfu from remote, and keep Forge on module-layer LWJGL via HotSpotNativeLoader plus shared Surface pointer so glfwInit and touch stay on one environ.

Co-authored-by: Cursor <cursoragent@cursor.com>